added delete task in todo

--- a/src/task.css
+++ b/src/task.css
@@ -17,11 +17,26 @@
 .taskContent {
   margin-left: 1em;
   font-size: larger;
+  display: flex;
+  height: inherit;
+  align-items: center;
+  justify-content: space-between;
+  width: 62%;
 }
 
 .taskIcon {
   height: 1.5em;
   width: 0.7em;
+}
+
+.deleteTaskBtn {
+  display: none;
+  color: grey;
+  font-weight: bold;
+}
+
+.taskContent:hover .deleteTaskBtn {
+  display: block;
 }
 
 .completed .taskIcon {
@@ -32,7 +47,7 @@
   background-color: lightblue;
 }
 
-.completed .taskContent {
+.completed .taskContent p {
   text-decoration: line-through;
 }
 
